--- a/apiserver-core/src/main/resources/log4j.properties
+++ b/apiserver-core/src/main/resources/log4j.properties
@@ -1,5 +1,6 @@
 log4j.rootLogger=DEBUG, stdout
 log4j.logger.org.apache.jackrabbit=WARN
+log4j.logger.org.springframework.integration.endpoint=WARN
 #log4j.logger.org.hibernate.SQL=Warn           #Log all SQL DML statements as they are executed
 #log4j.logger.org.hibernate.type=DEBUG          #Log all JDBC parameters
 #log4j.logger.org.hibernate.tool.hbm2ddl=DEBUG  #Log all SQL DDL statements as they are executed
