--- a/apiserver-core/pom.xml
+++ b/apiserver-core/pom.xml
@@ -15,8 +15,8 @@
 		<java-version>1.6</java-version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-		<spring.version>3.1.3.RELEASE</spring.version>
-		<spring-integration.version>2.2.0.RELEASE</spring-integration.version>
+		<spring.version>3.2.2.RELEASE</spring.version>
+		<spring-integration.version>3.0.0.BUILD-SNAPSHOT</spring-integration.version>
         <jackrabbit.version>2.6.0</jackrabbit.version>
 
 		<!-- path to extracted war file
