--- a/apiserver-core/src/main/resources/log4j.properties
+++ b/apiserver-core/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=WARN, stdout
+log4j.rootLogger=INFO, stdout
 log4j.logger.org.apache.jackrabbit=WARN
 log4j.logger.apiserver.core=DEBUG
 log4j.logger.org.springframework.integration.endpoint=WARN
