--- a/apiserver-core/pom.xml
+++ b/apiserver-core/pom.xml
@@ -229,7 +229,14 @@
             <groupId>org.mortbay.jetty</groupId>
             <artifactId>jsp-2.1-glassfish</artifactId>
             <version>2.1.v20100127</version>
+            <scope>provided</scope>
             <!--version>9.1.1.B60.25.p2</version-->
+        </dependency>
+
+        <dependency>
+            <groupId>c3p0</groupId
+            <artifactId>c3p0</artifactId>
+            <version>0.9.1.2</version>
         </dependency>
 
 
