--- a/apiserver-core/pom.xml
+++ b/apiserver-core/pom.xml
@@ -19,8 +19,6 @@
         <spring.version>3.2.2.RELEASE</spring.version>
         <spring-integration.version>3.0.0.BUILD-SNAPSHOT</spring-integration.version>
         <jackrabbit.version>2.6.0</jackrabbit.version>
-        <swagger-version>0.6.0-SNAPSHOT</swagger-version>
-        <!--swagger-version>0.6.0-SNAPSHOT</swagger-version-->
 
         <!-- path to extracted war file
         <cfusion.war>../resources/ColdFusion10/cfusion.war</cfusion.war>
@@ -32,34 +30,57 @@
 
 
     <dependencies>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.mangofactory</groupId>
             <artifactId>swagger-springmvc</artifactId>
-            <version>${swagger-version}</version>
+            <version>0.7.0-SNAPSHOT</version>
         </dependency>
-        <!--
-			 * Add ColdFusion jars to your local repository
-			   todo this: run this command (edit the <path(s)> first)
-			mvn install:install-file -Dfile=/<local path>/ColdFusion10/cfusion/WEB-INF/cfusion/lib/cfusion.jar -DgroupId=com.adobe -DartifactId=ColdFusion -Dversion=10 -Dpackaging=jar -DlocalRepositoryPath=/Users/<username>/.m2/repository/
-			   -->
 
-        <!--
-            Local project repo jars
-            @see https://devcenter.heroku.com/articles/local-maven-dependencies#create-a-local-maven-repository-directory
-         -->
-        <!--dependency>
-            <groupId>com.mikenimer</groupId>
-            <artifactId>Palladium</artifactId>
-            <version>1.0.75</version>
-        </dependency-->
 
-        <!--dependency>
-            <groupId>com.adobe</groupId>
-            <artifactId>ColdFusion</artifactId>
-            <scope>provided</scope>
-            <version>10</version>
-        </dependency-->
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>11.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>2.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>2.9.1</version>
+        </dependency>
+
+
+        <!-- Use Log4J for logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.6.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>1.6.4</version>
+        </dependency>
+
+
+
+        <!-- image libraries -->
         <dependency>
             <groupId>com.adobe.xmp</groupId>
             <artifactId>xmpcore</artifactId>
@@ -77,75 +98,18 @@
             <artifactId>im4java</artifactId>
             <version>1.3.2</version>
         </dependency>
-
-
-        <!--dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
-            <scope>provided</scope>
-        </dependency-->
-        <!--dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-web-api</artifactId>
-            <version>6.0</version>
-            <scope>provided</scope>
-        </dependency-->
+        <!--
+        Dependencies for IMAGE Metadata
+       -->
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.0.1</version>
-        </dependency>
-        <!--dependency>
-            <groupId>org.glassfish.extras</groupId>
-            <artifactId>glassfish-embedded-all</artifactId>
-            <version>3.1</version>
-        </dependency-->
-
-
-        <!-- XML -->
-        <dependency>
-            <groupId>javax.xml</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.0</version>
-        </dependency>
-
-
-        <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>3.7.2</version>
-        </dependency>
-
-        <dependency>
-            <groupId>xerces</groupId>
-            <artifactId>xercesImpl</artifactId>
-            <version>2.10.0</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>xerces</groupId>
-            <artifactId>xmlParserAPIs</artifactId>
+            <groupId>com.drewnoakes</groupId>
+            <artifactId>metadata-extractor</artifactId>
             <version>2.6.2</version>
-            <scope>provided</scope>
         </dependency>
 
-        <dependency>
-            <groupId>xalan</groupId>
-            <artifactId>xalan</artifactId>
-            <version>2.7.1</version>
-        </dependency>
 
 
         <!-- HTTP -->
-
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore</artifactId>
@@ -157,7 +121,6 @@
             <artifactId>httpclient</artifactId>
             <version>4.2.1</version>
         </dependency>
-
 
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -197,20 +160,6 @@
         </dependency>
 
 
-        <!-- Use Log4J for logging -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.6.3</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jcl-over-slf4j</artifactId>
-            <version>1.6.4</version>
-        </dependency>
-
-
         <!-- Jetty -->
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
@@ -233,6 +182,9 @@
             <!--version>9.1.1.B60.25.p2</version-->
         </dependency>
 
+
+
+        <!-- database driver -->
         <dependency>
             <groupId>c3p0</groupId>
             <artifactId>c3p0</artifactId>
@@ -240,7 +192,8 @@
         </dependency>
 
 
-        <!-- Jackrabbit
+
+        <!-- Jackrabbit -->
         <dependency>
             <groupId>javax.jcr</groupId>
             <artifactId>jcr</artifactId>
@@ -301,29 +254,9 @@
                 </exclusion>
             </exclusions>
         </dependency>
-         -->
 
-        <!--
-         Dependencies for IMAGE Metadata
-        -->
-        <!--
-		<dependency>
-			<groupId>com.sun.media</groupId>
-			<artifactId>jai_imageio</artifactId>
-			<version>1.1</version>
-		</dependency>
 
-		<dependency>
-			<groupId>javax.media</groupId>
-			<artifactId>jai-core</artifactId>
-			<version>1.1.3</version>
-		</dependency>
-        -->
-        <dependency>
-            <groupId>com.drewnoakes</groupId>
-            <artifactId>metadata-extractor</artifactId>
-            <version>2.6.2</version>
-        </dependency>
+
 
 
         <!--
@@ -350,21 +283,6 @@
             <version>0.11.4</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>11.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>cglib</groupId>
-            <artifactId>cglib</artifactId>
-            <version>2.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-            <version>2.9.1</version>
-        </dependency>
 
 
         <!--
@@ -396,56 +314,68 @@
         </dependency>
 
 
-        <!--
-          <dependency>
-              <groupId>net.sf.ehcache</groupId>
-              <artifactId>ehcache-jmsreplication</artifactId>
-              <version>0.4</version>
-          </dependency>
-          <dependency>
-              <groupId>net.sf.ehcache</groupId>
-              <artifactId>ehcache-core</artifactId>
-              <version>2.6.0</version>
-          </dependency>
-          <dependency>
-              <groupId>net.sf.ehcache</groupId>
-              <artifactId>ehcache-terracotta</artifactId>
-              <version>2.6.0</version>
-          </dependency>
-          <dependency>
-              <groupId>net.sf.ehcache</groupId>
-              <artifactId>ehcache-web</artifactId>
-              <version>2.0.4</version>
-          </dependency>
-          -->
 
 
         <!--
            Jackson JSON
         -->
         <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-core-asl</artifactId>
-            <version>1.9.9</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
-            <version>1.9.9</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-jaxrs</artifactId>
-            <version>1.9.9</version>
-        </dependency>
-
-        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
+            <artifactId>jackson-core</artifactId>
             <version>2.1.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-jaxb-annotations</artifactId>
+            <version>2.1.4</version>
+        </dependency>
+
+
+
+        <!-- XML -->
+        <dependency>
+            <groupId>javax.xml</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.7.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>xerces</groupId>
+            <artifactId>xercesImpl</artifactId>
+            <version>2.10.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>xerces</groupId>
+            <artifactId>xmlParserAPIs</artifactId>
+            <version>2.6.2</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>xalan</groupId>
+            <artifactId>xalan</artifactId>
+            <version>2.7.1</version>
+        </dependency>
+
 
 
         <!--
