add customized rules for swagger documentation, this will hide the spring mvc WebAsyncTask, Callable, and ResponseEntity from the documentation and just show the core return type

--- a/apiserver-core/pom.xml
+++ b/apiserver-core/pom.xml
@@ -45,7 +45,9 @@
         </dependency>
 
 
-
+        <!--
+        general libraries
+        -->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
@@ -62,6 +64,12 @@
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
             <version>2.9.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.3</version>
         </dependency>
 
 
