--- a/apiserver-core/pom.xml
+++ b/apiserver-core/pom.xml
@@ -18,7 +18,6 @@
 
         <spring.version>3.2.2.RELEASE</spring.version>
         <spring-integration.version>3.0.0.BUILD-SNAPSHOT</spring-integration.version>
-
     </properties>
 
 
@@ -64,6 +63,13 @@
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+
 
 
         <!-- Use Log4J for logging -->
@@ -172,7 +178,7 @@
 
         -->
 
-        <!-- Jetty  -->
+        <!-- Jetty
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-webapp</artifactId>
@@ -191,7 +197,7 @@
             <version>2.1.v20100127</version>
             <scope>provided</scope>
         </dependency>
-
+         -->
 
 
 
