--- a/apiserver-core/src/main/webapp/WEB-INF/web.xml
+++ b/apiserver-core/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-		 version="2.5">
+		 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_1.xsd"
+		 version="3.1">
 	<display-name>ApiServer</display-name>
 	<description></description>
 
@@ -18,6 +18,7 @@
 	<filter>
 		<filter-name>CORSFilter</filter-name>
 		<filter-class>apiserver.core.filters.CORSFilter</filter-class>
+        <async-supported>true</async-supported>
 	</filter>
 	<filter-mapping>
 		<filter-name>CORSFilter</filter-name>
@@ -41,6 +42,7 @@
     <filter>
 		<filter-name>charEncodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <async-supported>true</async-supported>
 		<init-param>
 			<param-name>encoding</param-name>
 			<param-value>UTF-8</param-value>
@@ -79,6 +81,7 @@
 			<param-name>contextConfigLocation</param-name>
 			<param-value>/WEB-INF/config/v1_0/apis-servlet.xml</param-value>
 		</init-param>
+        <async-supported>true</async-supported>
 		<load-on-startup>100</load-on-startup>
 	</servlet>
 
