get all of the unit tests working after the last few rounds of refactoring.

--- a/apiserver-core/src/main/resources/log4j.properties
+++ b/apiserver-core/src/main/resources/log4j.properties
@@ -17,7 +17,7 @@
 # along with the ApiServer Project.  If not, see <http://www.gnu.org/licenses/>.
 ################################################################################
 
-log4j.rootLogger=DEBUG, stdout
+log4j.rootLogger=WARN, stdout
 log4j.logger.org.apache.jackrabbit=WARN
 log4j.logger.apiserver.core=DEBUG
 #log4j.logger.org.springframework.web.servlet.handler=DEBUG
