fix the compiler errors within the different pom.xml files.
rework the url paths so they are clearer and show up in swagger correctly.

--- a/apiserver-coldfusion/src/main/webapp/WEB-INF/web.xml
+++ b/apiserver-coldfusion/src/main/webapp/WEB-INF/web.xml
@@ -41,7 +41,7 @@
 
     <servlet-mapping>
         <servlet-name>apiserver-httpbridge</servlet-name>
-        <url-pattern>/api</url-pattern>
+        <path-pattern>/api</path-pattern>
     </servlet-mapping>
 
 
