--- a/service-cache/pom.xml
+++ b/service-cache/pom.xml
@@ -9,10 +9,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mikenimer.apiserver</groupId>
-    <artifactId>apiserver-runner</artifactId>
+    <artifactId>service-cache</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>runner</name>
+    <name>service-cache</name>
     <url>http://maven.apache.org</url>
 
     <dependencies>
@@ -23,44 +23,25 @@
         </dependency>
 
 
-        <!-- Micro Services -->
-        <dependency>
-            <groupId>com.mikenimer.apiserver</groupId>
-            <artifactId>service-cache</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.mikenimer.apiserver</groupId>
-            <artifactId>service-pdf</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.mikenimer.apiserver</groupId>
-            <artifactId>service-images</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
-
-
-
-
-        <!-- Spring Boot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
+            <artifactId>spring-boot-starter-integration</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
 
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>4.11</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -90,7 +71,7 @@
         </pluginRepository>
     </pluginRepositories>
     <build>
-        <finalName>apiserver-service-pdf</finalName>
+        <finalName>service-pdf</finalName>
 
         <plugins>
             <plugin>
