--- a/service-pdf/src/main/resources/config/application.properties
+++ b/service-pdf/src/main/resources/config/application.properties
@@ -1,7 +1,7 @@
 #System properties
-server.port=8080
+server.port=9003
 
-
+#MVC Properties
 defaultReplyTimeout=6000
 
 CFRequestType=http
@@ -9,6 +9,7 @@ CFHost=localhost
 CFPort=8500
 CFContextRoot=/
 CFPath=/apiserver-inf/components/v1
+
 
 
 documentation.services.basePath=/
