update property values and Image test

--- a/service-images/src/main/resources/config/application.properties
+++ b/service-images/src/main/resources/config/application.properties
@@ -4,7 +4,7 @@ server.port=9002
 #MVC Properties
 defaultReplyTimeout=6000
 
-CFRequestType=http
+CFRequestType=http   #todo: rename to transport
 CFHost=localhost
 CFPort=8500
 CFContextRoot=/
