--- a/service-pdf/pom.xml
+++ b/service-pdf/pom.xml
@@ -33,5 +33,17 @@
 
     <build>
         <finalName>service-pdf</finalName>
+
+
+
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
