--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,11 @@
             <version>1.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>0.9.1</version>
+        </dependency>
     </dependencies>
 
     <repositories>
